--- a/project-blog/_config.yml
+++ b/project-blog/_config.yml
@@ -19,15 +19,14 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Scratchpad Projects
-email: your-email@example.com
+email: macius.krzysiak@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  This blog is a place for Scratchpad members to immortalize their projects. 
+  Writing makes it real.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username: jekyll
+twitter_username: idk
+github_username: idk
 
 # Build settings
 theme: minima
