Fixed nginx port mapping issue

--- a/hedgedoc/.env
+++ b/hedgedoc/.env
@@ -1,7 +1,7 @@
 POSTGRES_USER=hedgedoc
 POSTGRES_PASSWORD=BkyC42PwWXa7ZVCrKTR
 POSTGRES_DB=hedgedoc
-CMD_DOMAIN=md.scratchpad.lol:6969
+CMD_DOMAIN=md.scratchpad.lol
 CMD_PROTOCOL_USESSL=true
 CMD_URL_ADDPORT=false
 CMD_GITHUB_CLIENTID=Ov23lisPvxtJ7Lpfb5hg
